; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cmp_testlib.c_load_pem_cert.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cmp_testlib.c_load_pem_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @load_pem_cert(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* null, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = call i32 (...) @BIO_s_file()
  %7 = call i32* @BIO_new(i32 %6)
  store i32* %7, i32** %5, align 8
  %8 = call i32 @TEST_ptr(i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %25

11:                                               ; preds = %1
  %12 = load i32*, i32** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @BIO_read_filename(i32* %12, i8* %13)
  %15 = call i64 @TEST_int_gt(i32 %14, i32 0)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load i32*, i32** %5, align 8
  %19 = call i32* @PEM_read_bio_X509(i32* %18, i32* null, i32* null, i32* null)
  store i32* %19, i32** %4, align 8
  %20 = call i32 @TEST_ptr(i32* %19)
  br label %21

21:                                               ; preds = %17, %11
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @BIO_free(i32* %22)
  %24 = load i32*, i32** %4, align 8
  store i32* %24, i32** %2, align 8
  br label %25

25:                                               ; preds = %21, %10
  %26 = load i32*, i32** %2, align 8
  ret i32* %26
}

declare dso_local i32 @TEST_ptr(i32*) #1

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_s_file(...) #1

declare dso_local i64 @TEST_int_gt(i32, i32) #1

declare dso_local i32 @BIO_read_filename(i32*, i8*) #1

declare dso_local i32* @PEM_read_bio_X509(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
